# staff_scope

./: .gitignore  README.md  docker-compose.yaml
backend/: manage.py  pyproject.toml
backend/config/: asgi.py  wsgi.py
backend/config/settings/: __init__.py  apps.py  base.py  celery.py  database.py  middleware.py  security.py  templates.py
backend/hr_service/: models.py
